--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "browser-sync": "^2.28.3",
     "fs": "^0.0.1-security",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-convert-encoding": "^3.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemap": "^1.0.2",
     "gulp-sourcemaps": "^3.0.0",
+    "iconv-lite": "^0.6.3",
     "sass": "^1.58.3"
   }
 }
